# youtube-analytics-project

./: pyproject.toml
homework-2/: vdud.json
homework-4/: main.py
src/: PLVideo.py  channel.py  video.py
